--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Django==5.1.5
 django-allauth==65.3.1
 django-celery-beat==2.7.0
 django-environ==0.12.0
+django-redis==5.4.0
 django-timezone-field==7.1
 dnspython==2.7.0
 eventlet==0.39.0
