--- a/.gitignore
+++ b/.gitignore
@@ -263,4 +263,7 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+
+.dump.rdb
+.dump.rdb/
 # End of https://www.toptal.com/developers/gitignore/api/django,python
