--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 cron-descriptor==1.4.5
-cryptography==44.0.0
+cryptography>=44.0.1
 Django==5.1.5
 django-allauth==65.3.1
 django-celery-beat==2.7.0
